--- a/css/style.css
+++ b/css/style.css
@@ -7,6 +7,26 @@
 	font-size: 4rem;
 }
 
+@media only screen and (max-width: 600px) {
+	#header {
+		font-size: 2rem;
+	}
+
+	.container h2 {
+		font-size: 1rem;
+	}
+
+	.container h5 {
+		font-size: 1rem;
+	}
+
+}
+
+footer {
+	display: flex;
+	justify-content: center;
+}
+
 #footertext {
 	color: tomato;
 }
